# romea-ros2-simulation

./: .gitlab-ci.yml  AUTHORS  NOTICE  README.md  romea_simulation.repos  romea_simulation_public.repos
romea_simulation/: CMakeLists.txt  package.xml
romea_simulation_bringup/: CMakeLists.txt  README.md  package.xml
romea_simulation_bringup/launch/: entity.launch.py  simulator.launch.py
romea_simulation_bringup/launch/simulators/: gazebo.launch.py  gazebo_entity.launch.py  gazebo_simulator.launch.py
romea_simulation_bringup/python/: romea_simulation_bringup.py
romea_simulation_bringup/test/: test_simulation_bringup.py  test_simulation_bringup.yaml
romea_simulation_gazebo_classic/: CMakeLists.txt  README.md  package.xml
romea_simulation_gazebo_classic/include/romea_simulation_gazebo/: gazebo_controller_manager.hpp  gazebo_ros2_control_plugin.hpp
romea_simulation_gazebo_classic/src/: gazebo_controller_manager.cpp  gazebo_ros2_control_plugin.cpp
romea_simulation_gazebo_ros2_control/: CMakeLists.txt  package.xml
romea_simulation_gazebo_ros2_control/include/romea_simulation_gazebo_ros2_control/: gazebo_controller_manager.hpp  gazebo_ros2_control_plugin.hpp
romea_simulation_gazebo_ros2_control/src/: gazebo_controller_manager.cpp  gazebo_ros2_control_plugin.cpp
romea_simulation_gazebo_worlds/: CMakeLists.txt  README.md  package.xml
romea_simulation_gazebo_worlds/env-hooks/: romea_simulation_gazebo_worlds.dsv.in
romea_simulation_gazebo_worlds/launch/: world.launch
romea_simulation_gazebo_worlds/media/romea_ground_plane/materials/scripts/: romea_ground_plane.material
romea_simulation_gazebo_worlds/models/obstacle_iso18497/: model.config  model.sdf
romea_simulation_gazebo_worlds/models/romea_grass_plane/: model.config  model.sdf
romea_simulation_gazebo_worlds/models/romea_grass_plane/materials/scripts/: romea_grass_plane.material
romea_simulation_gazebo_worlds/models/romea_vine/: model.config  model.sdf
romea_simulation_gazebo_worlds/models/romea_vine/materials/scripts/: vine.material
romea_simulation_gazebo_worlds/models/romea_vine/meshes/: vine.dae  vine.stl
romea_simulation_gazebo_worlds/python/: gazebo_world.py  romea_gazebo_world.py
romea_simulation_gazebo_worlds/test/: test_gazebo_world.py
romea_simulation_gazebo_worlds/worlds/: friction_cone.world  romea_small_vineyard.world  simple_crop_field.world
