<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_simulation</name>
  <version>0.0.0</version>
  <description>Romea simulaton stack</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>BSD</license>

  <author>Jean Laneurit</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>romea_simulation_bringup</exec_depend>
  <exec_depend>romea_simulation_gazebo_worlds</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>