<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>romea_simulation_gazebo_worlds</name>
  <version>2.0.0</version>
  <description>romea_simulation_gazebo_worlds provides gazebo scenarios used by Team Romea</description>


  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>
  <author email="jean.laneurit@inrae.fr">Jean Laneurit</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>ros2launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
